fix: improve alignment of checkboxes in headers

--- a/github.user.styl
+++ b/github.user.styl
@@ -38,7 +38,7 @@
 @var checkbox readme_header 'Use old readme header design' 0
 @var checkbox short_headers 'Use shorter headers' 0
 @var checkbox gitako_shrink 'Fix hidden navigation caused by shrink feature in Gitako' 0
-@var checkbox chbx_a_header 'Fix notifications checkbox on header alignment' 0
+@var checkbox chbx_a_header 'Fix notifications checkbox on header alignment' 1
 @var checkbox code_borders  'Add borders around code blocks and similar elements' 1
 
 @var color    _red         'Base red color              ' #f07178
@@ -1137,6 +1137,25 @@ regexp('https?://render\.githubusercontent?.com(/.*)?') {
                 c: 0 0 bg2
                 &:hover { c: 0 0 bg3 }
                 &:active { c: 0 0 bg4 }
+            }
+        }
+    }
+
+    if (chbx_a_header) {
+        // Fix checkbox on notifications alignment
+        .Box-header {
+            label {
+                span {
+                    &.js {
+                        &-select-all-text, &-count-selected-text,
+                        &-all-count-selected-text {
+                            vertical-align: super
+                        }
+                    }
+                }
+                input[type='checkbox'] {
+                    margin-top: .25rem
+                }
             }
         }
     }
